# FalloutRestaurent

./: CMakeLists.txt  README.md  adatokKezelese.c  adatokKezelese.h  alapanyagokKezelese.c  alapanyagokKezelese.h  asztalokKezelese.c  asztalokKezelese.h  etelMenukKezelese.c  etelMenukKezelese.h  kinezetKezeles.c  kinezetKezeles.h  main.c
save/: dataProceeds.txt  desktopData.txt  menuByDay.txt  menuk_Waiter.txt
